# aiguard

./: .aiguard.yml  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  create_carousel.py  demo-prompt-scan.tape  demo.tape  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
action/: action.yml
src/aiguard/: __init__.py  __main__.py  cli.py  config.py  diff.py  models.py  scanner.py  scoring.py  suppression.py
src/aiguard/detectors/: __init__.py  async_antipatterns.py  base.py  complex_one_liners.py  copy_paste_duplication.py  dangerous_commands.py  data_exfiltration.py  generic_naming.py  hallucinated_imports.py  hardcoded_secrets.py  hidden_content.py  insecure_defaults.py  missing_input_validation.py  over_commenting.py  placeholder_code.py  prompt_injection.py  shallow_error_handling.py  sql_injection.py  tautological_code.py  unused_variables.py
src/aiguard/fixers/: __init__.py  builtin.py
src/aiguard/formatters/: __init__.py  base.py  json_fmt.py  sarif.py  terminal.py
src/aiguard/parsers/: __init__.py  base.py  markdown_parser.py  python_parser.py
src/aiguard/plugins/: __init__.py  loader.py
tests/: conftest.py  test_cli.py  test_config.py  test_diff.py  test_fixers.py  test_formatters.py  test_markdown_parser.py  test_scanner.py  test_scoring.py  test_suppression.py
tests/fixtures/: complex_oneliners.py  demo_malicious.md  duplicated.py  generic_names.py  malicious_prompt.md  no_validation.py  over_commented.py  placeholder.py  safe_prompt.md  shallow_error.py  tautological.py  unused_vars.py
tests/test_detectors/: test_async_antipatterns.py  test_complex_one_liners.py  test_copy_paste_duplication.py  test_dangerous_commands.py  test_data_exfiltration.py  test_generic_naming.py  test_hallucinated_imports.py  test_hardcoded_secrets.py  test_hidden_content.py  test_insecure_defaults.py  test_missing_input_validation.py  test_over_commenting.py  test_placeholder_code.py  test_prompt_injection.py  test_shallow_error_handling.py  test_sql_injection.py  test_tautological_code.py  test_unused_variables.py
vscode-aiguard/: README.md  package.json
vscode-aiguard/src/: extension.ts
